* Moved SVG to component to prevent too long generated filename for LittleFS * Added system statistics to config page * WIP: Added checkboxes to delete measurements

--- a/www/weight-whiskers/src/App.css
+++ b/www/weight-whiskers/src/App.css
@@ -4,23 +4,32 @@
 
 .App-logo {
   height: 40px;
+  width: 40px;
   pointer-events: none;
   margin: 5px;
 }
 
-.App-loading {
+.App-loading-container {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
   width: 30%;
+  height: 30%;
+  max-width: 200px;
+  margin: 15px auto;
+  text-align: center;
+}
+
+.App-loading {
+  width: 100%;
+  height: 100%;
   max-width: 200px;
   pointer-events: none;
-  margin: 15px auto;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-loading {
+  .App-loading-container {
     animation: App-loading-spin infinite 20s linear;
   }
 }
